--- a/views/tmpl/setupWizard.html
+++ b/views/tmpl/setupWizard.html
@@ -103,7 +103,7 @@
 								</div>
 								<div class="row">
 									<div class="col-sm-12 col-md-12 ta-c">
-										<button type="submit" ng-click="" class="btn btn-grey">Back</button>
+										<button type="submit" ng-click="WizardBack()" class="btn btn-grey">Back</button>
 										<button type="submit" ng-click="validateFacilityForm(addFacility)" class="btn btn-grey">Next</button>
 									</div>
 								</div>
@@ -164,7 +164,7 @@
 								</div>
 								<div class="row">
 									<div class="col-sm-12 col-md-12 ta-c">
-										<button type="submit" ng-click="" class="btn btn-grey">Back</button>
+										<button type="submit" ng-click="WizardBack()" class="btn btn-grey">Back</button>
 										<button type="submit" ng-click="navigateNextForm()" class="btn btn-grey">Next</button>
 									</div>
 								</div>
@@ -242,7 +242,7 @@
 								</div>
 								<div class="row">
 									<div class="col-sm-12 col-md-12 ta-c">
-										<button type="submit" ng-click="" class="btn btn-grey">Back</button>
+										<button type="submit" ng-click="WizardBack()" class="btn btn-grey">Back</button>
 										<button type="submit" ng-click="validateTechnicianForm(add_technician)" class="btn btn-grey">Done</button>
 									</div>
 								</div>
