Work on login and sign up

--- a/styles/custom.css
+++ b/styles/custom.css
@@ -2027,7 +2027,9 @@ md-card:hover .moreitemsondevice {
     font-size: 18px;
 }
 
-.page-login.core-new input::-webkit-input-placeholder {
+.page-login.core-new input::-webkit-input-placeholder,
+.page-login.core-new input::-moz-placeholder,
+.page-login.core-new input:-moz-placeholder {
     font-size: 18px;
     font-style: normal;
     -webkit-transition: all 0.3s ease;
@@ -2050,7 +2052,9 @@ input.input-sm.input-unstyled:focus {
     padding-left: 10px;
 }
 
-input.input-sm.input-unstyled::-webkit-input-placeholder {
+input.input-sm.input-unstyled::-webkit-input-placeholder,
+input.input-sm.input-unstyled::-moz-placeholder,
+input.input-sm.input-unstyled:-moz-placeholder {
     font-size: 15px;
     font-style: normal;
 }
@@ -2077,10 +2081,16 @@ input.input-sm.input-unstyled::-webkit-input-placeholder {
 }
 
 .page-login.core-new input:focus::-webkit-input-placeholder,
-.page-login.core-new input:valid::-webkit-input-placeholder {
+.page-login.core-new input:valid::-webkit-input-placeholder,
+.page-login.core-new input:focus::-moz-placeholder,
+.page-login.core-new input:valid::-moz-placeholder,
+.page-login.core-new input:focus:-moz-placeholder,
+.page-login.core-new input:valid:-moz-placeholder {
     color: #777777;
     font-size: 18px;
     -webkit-transform: translateY(-25px);
+	-moz-transform: translateY(-25px);
+	-o-transform: translateY(-25px);
     transform: translateY(-25px);
     visibility: visible !important;
     -webkit-transition: all 0.3s ease;
