--- a/views/tmpl/admin/user/user-groups.html
+++ b/views/tmpl/admin/user/user-groups.html
@@ -215,7 +215,7 @@
 																							 value="usergroupedit.usergroup_name" maxlength="30" placeholder="">
 																						</div>
 																						<div class="form-group col-sm-12 col-md-12">
-																							<label for="">Facility{{usergroupedit.facilities}}</label><br/>
+																							<label for="">Facility</label><br/>
 																							<input type="text" name="facility_name" id="facility_name" class="form-control" ng-model="usergroupedit.facility_name" disabled
 																							 placeholder="usergroupedit.facility_name">
 																						</div>
