User edit bug fix

--- a/views/tmpl/admin/user/edit-user.html
+++ b/views/tmpl/admin/user/edit-user.html
@@ -109,7 +109,7 @@
 													<label for="">Start Date</label>
 													<div class="input-group" ng-controller="DatepickerDemoCtrl">
 														<input type="text" class="form-control" uib-datepicker-popup="dd/MM/yyyy" ng-model="schedule.date" is-open="opened" datepicker-options="dateOptions"
-														 close-text="Close" name="date" onkeypress="return false;" />
+														 close-text="Close" name="date" onkeypress="return false;" min-date="mindate"/>
 														<span class="input-group-btn">
 															<button type="button" class="btn btn-default" ng-click="open($event)" style="padding: 8px 14px;"><i class="glyphicon glyphicon-calendar"></i></button>
 														</span>
