refresh button in activity

--- a/views/tmpl/admin/activity.html
+++ b/views/tmpl/admin/activity.html
@@ -44,7 +44,10 @@
 												<option>15 min</option>
 												<option>30 min</option>
 											</select> -->
-											<button class="form-control w-240" ng-click="eventFetch()">Auto Refresh</button>
+											<button class="form-control w-240" ng-click="eventFetch()">Refresh</button>
+											<!-- <div class="col-sm-3 col-md-3 refresh_btn">
+									<button class="list-icon" ng-click="eventFetch()"><i class="fa fa-refresh"></i></button>
+								</div> -->
 										</div>
 										
 									</div>
