--- a/views/tmpl/admin/help/history-and-reports.html
+++ b/views/tmpl/admin/help/history-and-reports.html
@@ -49,7 +49,7 @@
 												</div-->												
 												
 												<div class="btn-group">
-													<button class="btn btn-default btn-sm br-2" ng-click="resetHistory()">Reset <i class="fa fa-refresh"></i></button>
+													<button class="btn btn-default btn-sm br-2" ng-click="resetHistory()"><i class="fa fa-refresh"></i></button>
 												</div>
 											</div>
 
