--- a/views/tmpl/setupWizard.html
+++ b/views/tmpl/setupWizard.html
@@ -20,7 +20,7 @@
 										<label for="">Serial Number <span class="text-danger">*</span></label>
 										<input type="text" maxlength="32" name="serial_no" id="" ng-model="wizard_setup.device.serial_no" class="form-control" placeholder=""
 											required>
-										<span class="text-danger mandate">Can not proceed without this.</span>
+										<span class="text-danger mandate"></span>
 										<span class="error" ng-if="validDevice && device_form.serial_no.$invalid">Please Enter Serial Number</span>
 									</div>
 								</div>
