--- a/views/tmpl/admin/user/user-groups.html
+++ b/views/tmpl/admin/user/user-groups.html
@@ -53,7 +53,7 @@
 																			<div class="form-group col-sm-12 col-md-12">
 																				<label for="">Facility <span class="text-danger">*</span></label><br/>
 																				<select class="form-control" ng-model="userGroup.facility_id" ng-options="item.facility_id as item.facility_name for item in facilityList"
-																				 >
+																				 required>
 																			<option value="">Select</option>
 																		</select>
 																			</div>
@@ -217,7 +217,7 @@
 																						<div class="form-group col-sm-12 col-md-12">
 																							<label for="">Facility</label><br/>
 																							<input type="text" name="facility_name" id="facility_name" class="form-control" ng-model="usergroupedit.facility_name" disabled
-																							 placeholder="usergroupedit.facility_name">
+																							 placeholder="usergroupedit.facility_name" required>
 																						</div>
 																					</div>
 																					<div class="modal-footer" style="margin: 20px -15px -15px;">
