--- a/views/tmpl/admin/user/add-user.html
+++ b/views/tmpl/admin/user/add-user.html
@@ -218,7 +218,7 @@
 													<div class="tile-header mb-0 mt-20" ng-controller="ModalDemoCtrl">
 														<div class="row">
 															<div class="form-group col-sm-3 col-md-3">
-																<label for="">Firstly Select facility</label><br/>
+																<label for="">Select facility</label><br/>
 																<select class="form-control" ng-model="facility" ng-options="item.facility_id as item.facility_name for item in facilityList  track by item.facility_id"
 																 ng-change="unassignedGroup(facility)">
 															<option value="">Select</option>
