--- a/views/tmpl/setupWizard.html
+++ b/views/tmpl/setupWizard.html
@@ -1,7 +1,7 @@
 <div class="wizpopup">
     <div class="submitwizard">
         <div class="submit_wizard login-box-shadow borderradius6">
-			<span class="pop-out" logout-btn><i class="fa fa-power-off" aria-hidden="true"></i></span>
+			<span class="pop-out" logout-btn><i class="fa fa-times" aria-hidden="true"></i></span>
             <wizard on-finish="submitWizard()">
 				<wz-step wz-title="Add Device" ng-form="device_form">
 					<div class="wizpopup-form">
@@ -229,7 +229,7 @@
 										<div ng-controller="DatepickerDemoCtrl">
 											<label for="">Expiration Date <span class="text-danger">*</span></label>
 											<div class="input-group userexp">
-												<input type="text" class="form-control" uib-datepicker-popup="dd/MM/yyyy" ng-model="$parent.wizard_setup.technician.expirationdate"
+												<input type="text" class="form-control" uib-datepicker-popup="dd/MM/yyyy" ng-model="$parent.wizard_setup.technician.expiration_date
 													min-date="mindate" is-open="opened" datepicker-options="dateOptions" ng-required="true"
 													close-text="Close" onkeypress="return false;" name="expirationDate" />
 												<span class="input-group-btn">
