--- a/views/tmpl/admin/user/edit-user.html
+++ b/views/tmpl/admin/user/edit-user.html
@@ -270,7 +270,7 @@
 												<section class="tile">
 													<div class="row">
 														<div class="form-group col-sm-3 col-md-3">
-															<label for="">Firstly Select facility</label><br/>
+															<label for="">Select facility</label><br/>
 															<select class="form-control" ng-model="facility" ng-options="item.facility_id as item.facility_name for item in facilityList  track by item.facility_id"
 															 ng-change="userNotAssignedGroup(facility)">
 															<option value="">Select Facility</option>
