--- a/views/tmpl/admin/dashboard.html
+++ b/views/tmpl/admin/dashboard.html
@@ -89,8 +89,8 @@
 					<div class="text-center overflow">
 						<ul class="list-inline tbox mt-10">
 							<li class="b-r tcol">
-								<a ui-sref="app.admin.schedule.schedule-groups">
-									<h3>Schedule Groups</h3>
+								<a ui-sref="app.admin.schedule.schedules">
+									<h3>Schedules</h3>
 									<span class="text-muted">Management</span>
 								</a>
 							</li>
