--- a/views/tmpl/setupWizard.html
+++ b/views/tmpl/setupWizard.html
@@ -229,12 +229,12 @@
 										<div ng-controller="DatepickerDemoCtrl">
 											<label for="">Expiration Date <span class="text-danger">*</span></label>
 											<div class="input-group userexp">
-												<input type="text" class="form-control" uib-datepicker-popup="dd/MM/yyyy" ng-model="$parent.wizard_setup.technician.expiration_date
+												<input type="text" class="form-control" uib-datepicker-popup="dd/MM/yyyy" ng-model="$parent.wizard_setup.technician.expiration_date"
 													min-date="mindate" is-open="opened" datepicker-options="dateOptions" ng-required="true"
 													close-text="Close" onkeypress="return false;" name="expirationDate" />
 												<span class="input-group-btn">
-												<button type="button" class="btn btn-default" ng-click="open($event)" style="padding: 11px 14px"><i class="glyphicon glyphicon-calendar"></i></button>
-											</span>
+													<button type="button" class="btn btn-default" ng-click="open($event)" style="padding: 11px 14px"><i class="glyphicon glyphicon-calendar"></i></button>
+												</span>
 											</div>
 											<span class="error" ng-if="validTechnician && add_technician.expirationDate.$invalid">Please Enter Expiration Date</span>
 										</div>
