Remove door from device

--- a/views/tmpl/admin/device/devices.html
+++ b/views/tmpl/admin/device/devices.html
@@ -102,14 +102,14 @@
 													</div>
 												</div> -->
 
-												<div class="row">
+												<!-- <div class="row">
 													<div class="col-md-12">
-														<label for="">Doors <span class="text-danger">*</span></label><br/>
+														<label for="">Doors <span class="text-danger">*</span></label><br/> -->
 														<!--doorList-->
-														<select ng-model="device.door_id" multiple chosen="{width: '100%'}" ng-options="item.door_id as item.door_name for item in doorList">
+														<!-- <select ng-model="device.door_id" multiple chosen="{width: '100%'}" ng-options="item.door_id as item.door_name for item in doorList">
 														</select>
 													</div>
-												</div>
+												</div> -->
 											</div>
 											<div class="modal-footer">
 												<button class="btn btn-lightred btn-rounded btn-ef btn-ef-4 btn-ef-4c" id="close" ng-click="cancel()"><i class="fa fa-arrow-left"></i> Close</button>
