--- a/views/tmpl/admin/device/edit-device.html
+++ b/views/tmpl/admin/device/edit-device.html
@@ -116,13 +116,13 @@
 													</div>
 												</div>
 											</div>												
-										</div>
-										<div class="row">
-											<div class="form-group col-sm-6 col-md-6">
-												<label for="">Doors <span class="text-danger">*</span></label><br/><!--doorList-->
-												<select ng-model="editDevice.door_id" multiple chosen="{width: '100%'}" disabled ng-options="item.door_id as item.door_name for item in doorList">
+										<!-- </div>
+										<div class="row"> -->
+											<!-- <div class="form-group col-sm-6 col-md-6">
+												<label for="">Doors <span class="text-danger">*</span></label><br/> --><!--doorList-->
+												<!-- <select ng-model="editDevice.door_id" multiple chosen="{width: '100%'}" disabled ng-options="item.door_id as item.door_name for item in doorList">
 												</select>
-											</div>
+											</div> -->
 										
 											<div class="form-group col-sm-6 col-md-6" >
 												<label for="">Technician <span class="text-danger">*</span></label><br/>
