--- a/views/tmpl/admin/door/doors.html
+++ b/views/tmpl/admin/door/doors.html
@@ -45,7 +45,17 @@
 													<div class="form-group col-sm-6 col-md-6 last">
 														<label for="">Facility <span class="text-danger">*</span></label><br/>
 														<select class="form-control" ng-model="door.facility_id" ng-options="item.facility_id as item.facility_name for item in facilityList"
-														 required>
+														 required ng-change="getDevice()">
+															<option value="">Select</option>
+														</select>
+													</div>
+												</div>
+												<div class="row">
+													<div class="form-group col-sm-6 col-md-6 first">
+														<label for="">Device <span class="text-danger">*</span></label>
+														<br/>
+														<select class="form-control" ng-model="door.device_id" ng-options="item.device_id as item.device_name for item in door.devices"
+														 required ng-change="check_relay_count(item.remaining_relay_count)" ng-disabled="!door.devices">
 															<option value="">Select</option>
 														</select>
 													</div>
