--- a/views/tmpl/admin/user/add-user.html
+++ b/views/tmpl/admin/user/add-user.html
@@ -179,7 +179,7 @@
 															</label>
 														</div>
 														<div class="col-sm-12 col-md-12">
-															<div class="row">																
+															<!-- <div class="row">																
 																<div id="expirationDateMainDiv" class="form-group col-sm-6 col-md-3" ng-hide="radioModel=='Inactive'">
 																	<label for="">Expiration Date <span class="text-danger">*</span></label>
 																	<div id="expirationDateInnerDiv" class="input-group userexp" ng-controller="DatepickerDemoCtrl">
@@ -199,7 +199,7 @@
 																	<label for="">SIP Password <span class="text-danger">*</span></label>
 																	<input type="password" name="sip_password" id="" ng-model="userData.sip_password" class="form-control" required>
 																</div>
-															</div>
+															</div> -->
 														</div>
 													</div>
 													<div class="mt-40 pb-10 ta-c">
