--- a/views/header.html
+++ b/views/header.html
@@ -65,7 +65,7 @@
 				</ul>
 			</li>
 			<li class="dropdown" ng-class="(active == 'administrator') ? 'active' : ''" uib-dropdown>
-				<!-- <span class="dropdown-toggle" uib-dropdown-toggle>Administrator &nbsp;<fa name="angle-down"></fa></span> -->
+				<span class="dropdown-toggle" uib-dropdown-toggle>Administrator &nbsp;<fa name="angle-down"></fa></span>
 				<ul class="dropdown-menu panel panel-default animated littleFadeInDown" role="menu">
 					<li><a ui-sref="app.admin.administrator.roles">Roles</a></li>
 					<li><a ui-sref="app.admin.administrator.add-roles">Add Roles</a></li>
