--- a/views/tmpl/admin/administrator/roles.html
+++ b/views/tmpl/admin/administrator/roles.html
@@ -113,10 +113,10 @@
 												<!-- <p>{{ role.status }}</p>
 												<p>{{ role.access }}</p> -->
 											<div class="md-actions" layout="row" layout-align="center center">
-												<a class="btn btn-orange btn-border btn-rounded" ui-sref="app.admin.administrator.view-roles">View</a>
+												<a class="btn btn-orange btn-border btn-rounded" ui-sref="app.admin.administrator.view-roles({role_id:role.role_id})">View</a>
 												<!-- <a class="btn btn-success btn-border btn-rounded" ui-sref="app.admin.administrator.edit-roles">Edit</a> -->
 												<a class="btn btn-success btn-border btn-rounded">Edit</a>
-												<a class="btn btn-danger btn-border btn-rounded" ng-click="showConfirm($event)">Delete</a>
+												<a class="btn btn-danger btn-border btn-rounded" ng-click="roleDelete($event, role.role_id)">Delete</a>
 											</div>
 										</md-card>										
 									</md-content>
