--- a/views/tmpl/admin/dashboard.html
+++ b/views/tmpl/admin/dashboard.html
@@ -54,7 +54,7 @@
 					</div>
 				</section>
 			</div>
-			<!--<div class="adminroles card-container col-sm-4 col-md-3">
+			<div class="adminroles card-container col-sm-4 col-md-3">
 				<section class="tile tile-simple hovershadow border5">
 					<a ui-sref="app.admin.permissions.roles">
 						<div class="above1800 tile-widget bg-cyan text-center p-30 brt5">
@@ -78,7 +78,7 @@
 						</ul>
 					</div>
 				</section>
-			</div>-->
+			</div>
 			<div class="holidayschedule card-container col-sm-5 col-md-4">
 				<section class="tile tile-simple hovershadow border5">
 					<a ui-sref="app.admin.schedule.schedule-groups">
