SIP change for wizard

--- a/views/tmpl/setupWizard.html
+++ b/views/tmpl/setupWizard.html
@@ -38,7 +38,7 @@
 										<span class="error" ng-if="validDevice && device_form.registration_code.$invalid">Please Enter Registration Code</span>
 									</div>
 								</div>
-								<div class="row">
+								<!-- <div class="row">
 									<div class="form-group col-sm-6 col-md-6">
 										<label for="">SIP Username <span class="text-danger">*</span></label>
 										<input type="text" autocomplete="off" maxlength="32" name="sip_username" id="" ng-model="wizard_setup.device.sip_username"
@@ -51,7 +51,7 @@
 											class="form-control" placeholder="" required>
 										<span class="error" ng-if="validDevice && device_form.sip_password.$invalid">Please Enter SIP Password</span>
 									</div>
-								</div>
+								</div> -->
 								<div class="row">
 									<div class="col-sm-12 col-md-12 ta-c">
 										<button ng-click="validateDeviceForm(device_form)" class="btn btn-grey">Next</button>
